<bug squashing>

--- a/style.css
+++ b/style.css
@@ -313,15 +313,15 @@ a:visited {
   cursor: pointer;
   transition: ease-in-out 500ms;
 
-  border-left: 2px solid red;
-  border-right: 2px solid red;
-  border-bottom: 2px solid red;
-  /* border-image: linear-gradient(
+  border-left: 2px solid;
+  border-right: 2px solid;
+  border-bottom: 2px solid;
+  border-image: linear-gradient(
       120deg,
       var(--color-primary) 30%,
       var(--color-secondary) 70%
     )
-    30; */
+    30;
 }
 
 .mobile_nav_btn:hover {
